package connect4.views.graphics;

public abstract class GameLoopView extends PanelView {

    public GameLoopView() {

    }

}
